<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/negative"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageButton android:id="@+id/startPairButton"

            android:layout_height="200dp"
            android:layout_width="wrap_content"

            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/band_not_paired"

            android:contentDescription="Icon"
            />

        <Space
            android:layout_height="10dp"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/dialog_check_band_on_warning"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="20dp"

        android:background="@android:color/white">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:textSize="20dp"
            android:textColor="#555555"
            android:text="@string/dialog_check_band_on_detail"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:textSize="20dp"
            android:textColor="#555555"
            android:text="@string/dialog_check_band_on_request"
            />

    </LinearLayout>


</LinearLayout>
