<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="390dp"

    android:weightSum="39">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="4"

        android:background="#f2f2f2"
        android:orientation="horizontal">
        
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            
            android:layout_weight="1" />
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"

            android:layout_weight="10"

            android:gravity="center|start"

            android:textSize="13dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/data_details_enable_label"/>

        <Space
            android:layout_width="180dp"
            android:layout_height="match_parent"

            android:layout_weight="18" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"

            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginStart="10dp"

        android:layout_weight="5"

        android:textSize="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="center|start"
        android:textColor="@android:color/white"
        android:text="Graph"/>

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="17"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="4"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:background="@color/data_detail_high_value_bg"

            android:layout_weight="10.66">

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:background="@color/data_detail_avg_value_bg"

            android:layout_weight="10.66">
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:background="@color/data_detail_low_value_bg"

            android:layout_weight="10.66">

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginStart="10dp"

        android:layout_weight="5"

        android:textSize="20dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="center|start"
        android:textColor="@android:color/white"
        android:text="Thresholds"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@android:color/white"

        android:layout_weight="4"

        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="18"

            android:textSize="13dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/data_details_warn_exceed_label"
            android:gravity="center|start"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"

            android:layout_gravity="center"
            android:background="@color/data_details_warn_exceed_level_bg"

            android:layout_weight="4"

            android:textSize="20dp"
            android:gravity="center_vertical|start"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="2.5"

            android:textSize="13dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical|start"
            android:text="@string/data_card_heart_rate_data_units"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_weight="2"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>